--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
-<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-<script src="index.js"></script>
-</head>
-<body>
-<p id="demo">Click the button to get your coordinates:</p>
-<button onclick="getCurrentPostion()">Try It</button>
-</body>
+	<head>
+		<script src="js/jquery-1.8.2.min.js"></script>
+		<script src="js/index.js"></script>
+	</head>
+	<body onload="getConsumerPostion();">
+		<p id="demo">Click the button to get your coordinates:</p>
+	</body>
 </html>
