dynamically updating the coordinates

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -5,6 +5,8 @@
 		<script src="js/index.js"></script>
 	</head>
 	<body onload="getConsumerPostion();">
-		<p id="demo">Click the button to get your coordinates:</p>
+		<p id="demo">Your Coordinates:</p>
+		<div id="lat">Latitude:0</div>
+		<div id="lon">Longitude:0</div>
 	</body>
 </html>
