--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="js/jquery-1.8.2.min.js"></script>
+		<meta charset="utf-8"/>
+
+  		<title>GeoLocation Service</title>
+  		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+  		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+ 		<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
 		<script src="js/index.js"></script>
 	</head>
 	<body onload="getConsumerPostion();">
-		<p id="demo">Your Coordinates:</p>
-		<div id="lat">Latitude:0</div>
-		<div id="lon">Longitude:0</div>
+		<div data-role="page">
+  			<div data-role="header">
+   				<h1> GeoLocation Service </h1>
+ 			</div>
+
+           <div data-role="content">
+   				<ul data-role="listview">
+     				<li>Latitude<span class="ui-li-aside" id="lat">0</span></li>
+     				<li>Longitude<span class="ui-li-aside" id="lon">0</span></li>
+     				<li>DeviceId<span class="ui-li-aside" id="device">0</span></li>
+     				<li>Status<span class="ui-li-aside" id="status">0</span></li>
+   				</ul>	
+  		</div>
+
+  		<div data-role="footer">
+ 	 	</div>
 	</body>
 </html>
