--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,30 +1,77 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8"/>
+		<meta charset="utf-8" />
 
-  		<title>GeoLocation Service</title>
-  		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
-  		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
- 		<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+		<title>GeoLocation Service</title>
+		<link rel="stylesheet"
+			href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script
+			src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
 		<script src="js/index.js"></script>
 	</head>
-	<body onload="getConsumerPostion();">
-		<div data-role="page">
-  			<div data-role="header">
-   				<h1> GeoLocation Service </h1>
- 			</div>
+	<body>
+		<div data-role="page" data-theme="b" id="page1">
+			<div data-role="header">
+				<h1> GeoLocation Service </h1>
+			</div>
+			<div data-role="content">
+				<form data-transition="flow" id="activationForm">
+					<div data-role="fieldcontainer">
+						<label for="activationPin">Enter Activation Pin</label>
+						<input type="number" name="activationPin" id="activationPin"
+							value="" placeholder="PIN" min="1"/>
+					</div>
+					<div id="submitPin" data-role="fieldcontain">
+						<input type="submit" value="submit" data-inline="true" />
+					</div>
+				</form>
+			</div>
+			<div data-role="footer"></div>
+			<script>
+				$('#activationForm').submit(function(){
+				
+				deviceId = $('#activationPin').val();
+				getConsumerPostion();
+				$.mobile.changePage('#page2',{
+				transition: "flow",
+				reverse: false,
+				changeHash: false
+				});
+				return false;
+				});
+			</script>
+		</div>
+		<div data-role="page" id="page2" data-theme="b">
+			<div data-role="header">
+				<h1> GeoLocation Service </h1>
+			</div>
 
-           <div data-role="content">
-   				<ul data-role="listview">
-     				<li>Latitude<span class="ui-li-aside" id="lat">0</span></li>
-     				<li>Longitude<span class="ui-li-aside" id="lon">0</span></li>
-     				<li>DeviceId<span class="ui-li-aside" id="device">0</span></li>
-     				<li>Status<span class="ui-li-aside" id="status">0</span></li>
-   				</ul>	
-  		</div>
+			<div data-role="content">
+				<ul data-role="listview">
+					<li>
+						Latitude
+						<span class="ui-li-aside" id="lat">0</span>
+					</li>
+					<li>
+						Longitude
+						<span class="ui-li-aside" id="lon">0</span>
+					</li>
+					<li>
+						DeviceId
+						<span class="ui-li-aside" id="device">0</span>
+					</li>
+					<li>
+						Status
+						<span class="ui-li-aside" id="status">0</span>
+					</li>
+				</ul>
+			</div>
+			<div data-role="footer">
+			</div>
+		</div>
 
-  		<div data-role="footer">
- 	 	</div>
+
 	</body>
 </html>
